@@ -1,3 +1,6 @@
+* Add paths and model context to action data
+* Add indentation in CSV export of tree
+* Manage which records to use for actions
 * Add drag and drop on CSV export and import
 * Remove tempusdominus dependency
 * Handle device cookie
